--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,7 +1,9 @@
+@import '../styles/colors.scss';
+
 .container {
   width: 100%;
   height: 100%;
-  background: lightgrey;
+  background: $clouds-400;
   margin: 0 auto;
 }
 
@@ -15,14 +17,15 @@
 .focusArea {
   max-width: 400px;
   height: 100%;
-  background: white;
+  background: $clouds-200;
   margin: 0 auto;
   padding: 10px 0 0 0;
 }
 
 .header {
   font-size: 18px;
-  color: darkslategray;
+  color: $orange-700;
+  font-weight: bold;
   padding: 10px 10px;
   text-align: center;
 }
