--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -24,7 +24,7 @@
 
 .header {
   font-size: 18px;
-  color: $orange-700;
+  color: $asbestos-700;
   font-weight: bold;
   padding: 10px 10px;
   text-align: center;
