--- a/styles/global.scss
+++ b/styles/global.scss
@@ -9,6 +9,12 @@ body {
     sans-serif;
 }
 
+input {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
+}
+
 #__next {
   height: 100%;
   width: 100%;
