--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -22,6 +22,7 @@
   padding: 10px 0 0 0;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .header {
@@ -35,6 +36,7 @@
 .list {
   padding: 10px 20px;
   height: 100%;
+  overflow: auto;
 }
 
 .focusFooter {
