--- a/components/SwipeableItem/SwipeableItem.module.scss
+++ b/components/SwipeableItem/SwipeableItem.module.scss
@@ -9,6 +9,8 @@
   display: flex;
   height: 100%;
   width: 100%;
+  max-height: 1000px;
+  transition: max-height 0.5s ease;
   position: relative;
   align-items: center;
 }
