Added Material UI with a theme and added the FAB

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -41,5 +41,7 @@
 
 .focusFooter {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
