--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,9 +1,11 @@
 @import '../styles/colors.scss';
+@import '../styles/palette.module.scss';
 
 .container {
   width: 100%;
   height: 100%;
-  background: $clouds-400;
+  background: darken($light, 2%);
+  // background: $clouds-400;
   margin: 0 auto;
 }
 
@@ -17,7 +19,7 @@
 .focusArea {
   max-width: 400px;
   height: 100%;
-  background: $clouds-200;
+  background: $light;
   margin: 0 auto;
   padding: 10px 0 0 0;
   display: flex;
