--- a/styles/palette.module.scss
+++ b/styles/palette.module.scss
@@ -1,20 +1,29 @@
-$light: #f7f8f6;
-$dark: #3a5f5a;
-$light-secondary: #dddedd;
-$dark-secondary: #293d3b;
-$light-tertiary: #9e9e9e;
-$dark-tertiary: #000000;
+$light: #f6f5f8;
+$dark: #5f6679;
+$light-secondary: #dcdae0;
+$dark-secondary: #4c4f59;
+$light-tertiary: #9d9d9d;
+$dark-tertiary: #1d1e22;
 $light-light: #ffffff;
 $dark-light: #ffffff;
-$accent: #a4756a;
-$accent-secondary: #b7928a;
+$accent: #ffe082;
+$accent-secondary: #ffedb5;
 $primary: #82c0a9;
-$info: #87937a;
+$info: #d1d0ca;
 $success: #5cb46b;
 $warning: #daa433;
 $danger: #f44336;
 $primary-secondary: #ffffff;
-$info-secondary: #d3d8ce;
+$info-secondary: #ffffff;
 $success-secondary: #c5e4ca;
 $warning-secondary: #f1deb4;
-$danger-secondary: #fccbc7
+$danger-secondary: #fccbc7;
+
+// Derived colors
+$primaryLight: lighten($primary, 15%);
+
+
+// Text hierarchy
+$primaryText: #fff;
+$accentText: #424949;
+$lightDim: #616a6b;
