--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  position: relative;
 }
 
 .header {
@@ -46,4 +47,19 @@
   justify-content: flex-end;
   margin-right: 20px;
   margin-bottom: 20px;
+}
+
+.addTodo {
+  padding: 20px;
+  font-size: 18px;
+  background: $accent-secondary;
+  color: $dark;
+}
+
+.addTodoSubmit {
+  padding: 20px;
+  border-radius: 50%;
+  font-size: 18px;
+  background: green;
+  color: $dark;
 }
