Added Post it colors and wood texture

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -40,6 +40,8 @@
   padding: 10px 20px;
   height: 100%;
   overflow: auto;
+  background: $board;
+  background-image: url('/wood-pattern.png');
 }
 
 .focusFooter {
