--- a/styles/palette.module.scss
+++ b/styles/palette.module.scss
@@ -23,6 +23,17 @@ $danger-secondary: #fccbc7;
 $primaryLight: lighten($primary, 15%);
 
 
+// Post it note colors
+$board: #CAB070;
+
+// Marrakesh colors
+$red: #F1515C;
+$yellow: #FFD42C;
+$green: #5FC08B;
+$blue: #329AFE;
+$purple: #C392C2;
+
+
 // Text hierarchy
 $primaryText: #fff;
 $accentText: #424949;
