--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -42,6 +42,7 @@
   overflow: auto;
   background: $board;
   background-image: url('/wood-pattern.png');
+  border-radius: 5px;
 }
 
 .focusFooter {
