--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -4,7 +4,7 @@
 .container {
   width: 100%;
   height: 100%;
-  background: darken($light, 2%);
+  background: $gray;
   // background: $clouds-400;
   margin: 0 auto;
 }
@@ -19,7 +19,7 @@
 .focusArea {
   max-width: 400px;
   height: 100%;
-  background: $light;
+  background: white;
   margin: 0 auto;
   padding: 10px 0 0 0;
   display: flex;
@@ -30,7 +30,7 @@
 
 .header {
   font-size: 18px;
-  color: $asbestos-700;
+  color: $primaryTextDark;
   font-weight: bold;
   padding: 10px 10px;
   text-align: center;
@@ -40,7 +40,7 @@
   padding: 10px 20px;
   height: 100%;
   overflow: auto;
-  background: $board;
+  background: $primary-secondary-dark;
   background-image: url('/wood-pattern.png');
   border-radius: 5px;
 }
@@ -55,8 +55,8 @@
 .addTodo {
   padding: 20px;
   font-size: 18px;
-  background: $accent-secondary;
-  color: $dark;
+  background: $secondary;
+  color: $grayDark;
 }
 
 .addTodoSubmit {
@@ -64,5 +64,5 @@
   border-radius: 50%;
   font-size: 18px;
   background: green;
-  color: $dark;
+  color: $grayDark;
 }
