--- a/components/TodoList/TodoList.module.scss
+++ b/components/TodoList/TodoList.module.scss
@@ -5,7 +5,6 @@
   display: block;
   margin: 10px 20px;
   border-radius: 5px;
-  overflow: hidden;
   border: 0;
   box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.2),
     0px 2px 2px 0px rgba(0,0,0,0.04)
@@ -16,7 +15,7 @@
   flex-flow: row wrap;
   box-shadow: none;
   justify-content: space-evenly;
-  margin: 0;
+  margin: 5px 20px;
 
 }
 
