--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -22,6 +22,7 @@
   background: white;
   margin: 0 auto;
   padding: 10px 0 0 0;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -30,17 +31,17 @@
 
 .header {
   font-size: 18px;
-  color: $primaryTextDark;
+  color: $primary;
   font-weight: bold;
   padding: 10px 10px;
   text-align: center;
 }
 
 .list {
-  padding: 10px 20px;
+  padding: 5px 0px;
   height: 100%;
   overflow: auto;
-  background: $primary-secondary-dark;
+  background: $primary-light;
   background-image: url('/wood-pattern.png');
   border-radius: 5px;
 }
@@ -55,6 +56,7 @@
 .focusFooter {
   display: flex;
   justify-content: flex-end;
+  margin-top: 10px;
   margin-right: 20px;
   margin-bottom: 20px;
 }
