--- a/components/TodoList/TodoList.module.scss
+++ b/components/TodoList/TodoList.module.scss
@@ -46,7 +46,7 @@
   justify-content: center;
   font-family: marker, Arial, Helvetica, sans-serif;
   background: adjust-hue($secondary, 5%);
-  background-image: url("https://www.transparenttextures.com/patterns/embossed-paper.png");
+  background-image: url("/embossed-paper.png");
   border: none;
   box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.2),
     0px 2px 2px 0px rgba(0,0,0,0.04) ;
@@ -150,6 +150,7 @@
   width: 10px;
   background: $secondary-lighter;
   z-index: 5;
+  box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.4);
 }
 
 .paperCurl {
