--- a/components/TodoList/TodoList.module.scss
+++ b/components/TodoList/TodoList.module.scss
@@ -31,26 +31,15 @@
 }
 
 .todo {
-  // border-bottom: 1px solid $sunflower-200;
   padding: 15px;
-  // background: $accent;
-  // font-size: 12px;
-  // display: flex;
-
   width: 150px;
   height: 150px;
-  // // margin: 5px;
   border-radius: 2px;
-  // flex-basis: 45%;
-  // text-align: center;
   justify-content: center;
   font-family: marker, Arial, Helvetica, sans-serif;
   background: adjust-hue($secondary, 5%);
   background-image: url("/embossed-paper.png");
   border: none;
-  box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.2),
-    0px 2px 2px 0px rgba(0,0,0,0.04) ;
-
   position: absolute;
   left: 0;
 
@@ -143,7 +132,15 @@
   }
 }
 
-.underFlap {
+.swiper {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
+.backPaper {
   height: 100%;
   position: absolute;
   left: 0;
@@ -151,6 +148,12 @@
   background: $secondary-lighter;
   z-index: 5;
   box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.4);
+}
+
+.frontPaper {
+  width: 150px;
+  height: 150px;
+  position: absolute; 
 }
 
 .paperCurl {
