--- a/components/TodoList/TodoList.module.scss
+++ b/components/TodoList/TodoList.module.scss
@@ -37,17 +37,16 @@
   border-radius: 2px;
   justify-content: center;
   font-family: marker, Arial, Helvetica, sans-serif;
-  background: adjust-hue($secondary, 5%);
+  background: $primary-dark;
   background-image: url("/embossed-paper.png");
   border: none;
   position: absolute;
   left: 0;
 
   &.isChecked {
-    background: $secondary;
 
     .name {
-      color: $secondaryText;
+      color: $gray-dark;
       text-decoration-line: line-through;
       font-size: 16px;
     }
@@ -88,12 +87,9 @@
 }
 
 .name {
-  font-size: 16px;
-  color: $asbestos-900;
-
   font-size: 18px;
   text-align: center;
-  color: black;
+  color: $black;
 }
 
 .addTodoRow {
@@ -145,7 +141,7 @@
   position: absolute;
   left: 0;
   width: 10px;
-  background: $secondary-lighter;
+  background: $primary-light;
   z-index: 5;
   box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.4);
 }
@@ -161,7 +157,6 @@
   position: absolute;
   left: 10px;
   width: 10px;
-  background: linear-gradient(to left, $secondary, $secondary-lighter);
   opacity: 0.8;
   z-index: 5;
 }
