--- a/styles/palette.module.scss
+++ b/styles/palette.module.scss
@@ -1,111 +1,138 @@
-// $light: #f6f5f8;
-// $dark: #5f6679;
-// $light-secondary: #dcdae0;
-// $dark-secondary: #4c4f59;
-// $light-tertiary: #9d9d9d;
-// $dark-tertiary: #1d1e22;
-// $light-light: #ffffff;
-// $dark-light: #ffffff;
-// $accent: #ffedb5;
-// $accent-secondary: #ffedb5;
-// $primary: #82c0a9;
-// // $primary: #D05538;
-// $info: #d1d0ca;
-// $success: #5cb46b;
-// $warning: #daa433;
-// $danger: #f44336;
-// $primary-secondary: #ffffff;
-// $info-secondary: #ffffff;
-// $success-secondary: #c5e4ca;
-// $warning-secondary: #f1deb4;
-// $danger-secondary: #fccbc7;
+// // $light: #f6f5f8;
+// // $dark: #5f6679;
+// // $light-secondary: #dcdae0;
+// // $dark-secondary: #4c4f59;
+// // $light-tertiary: #9d9d9d;
+// // $dark-tertiary: #1d1e22;
+// // $light-light: #ffffff;
+// // $dark-light: #ffffff;
+// // $accent: #ffedb5;
+// // $accent-secondary: #ffedb5;
+// // $primary: #82c0a9;
+// // // $primary: #D05538;
+// // $info: #d1d0ca;
+// // $success: #5cb46b;
+// // $warning: #daa433;
+// // $danger: #f44336;
+// // $primary-secondary: #ffffff;
+// // $info-secondary: #ffffff;
+// // $success-secondary: #c5e4ca;
+// // $warning-secondary: #f1deb4;
+// // $danger-secondary: #fccbc7;
 
-// // Derived colors
-// $primaryLight: lighten($primary, 15%);
-// $primaryTest: tint($primary, 5%);
-
-
-
-// Post it note colors
-// $board: #CAB070;
-// $board: #c0825f;
-
-// Marrakesh colors
-$red: #F1515C;
-$yellow: #FFD42C;
-$dark-green: #5FC08B;
-$green: #6DDA6D;
-$blue: #329AFE;
-$purple: #C392C2;
-
-
-// Text hierarchy
-// $primaryText: #fff;
-// $accentText: #424949;
-// $lightDim: #616a6b;
+// // // Derived colors
+// // $primaryLight: lighten($primary, 15%);
+// // $primaryTest: tint($primary, 5%);
 
 
 
-// New Palette - 
-// From Colormind
-// Secondary- 5FC08B
-// Accent- C0825F
-// Primary- AA5440 Buttons. Dark color
-// Light- F3F5EF
-// Dark- 344B47
+// // Post it note colors
+// // $board: #CAB070;
+// // $board: #c0825f;
+
+// // Marrakesh colors
+// $red: #F1515C;
+// $yellow: #FFD42C;
+// $dark-green: #5FC08B;
+// $green: #6DDA6D;
+// $blue: #329AFE;
+// $purple: #C392C2;
+
+
+// // Text hierarchy
+// // $primaryText: #fff;
+// // $accentText: #424949;
+// // $lightDim: #616a6b;
 
 
 
-$primary: #AA5440;
-$primary-secondary: #D5A17B;
-$secondary: #FFEDB5;
-$secondary-accent: #AFD7A0;
+// // New Palette - 
+// // From Colormind
+// // Secondary- 5FC08B
+// // Accent- C0825F
+// // Primary- AA5440 Buttons. Dark color
+// // Light- F3F5EF
+// // Dark- 344B47
+
+
+
+// $primary: #AA5440;
+// $primary-secondary: #D5A17B;
+// $secondary: #FFEDB5;
+// $secondary-accent: #AFD7A0;
+// $accent: #5FC08B;
+
+// // tints and shades
+// $primary-dark: darken($primary, 10%);
+// $primary-darker: darken($primary, 20%);
+// $primary-light: lighten($primary, 10%);
+// $primary-lighter: lighten($primary, 20%);
+
+// $primary-secondary-dark: darken($primary-secondary, 10%);
+// $primary-secondary-darker: darken($primary-secondary, 20%);
+// $primary-secondary-light: lighten($primary-secondary, 10%);
+// $primary-secondary-lighter: lighten($primary-secondary, 20%);
+
+// $secondary-dark: darken($secondary, 10%);
+// $secondary-darker: darken($secondary, 20%);
+// $secondary-light: #FFF2C8;
+// $secondary-lighter: #FFF6DA;
+
+// $secondary-accent-dark: darken($secondary-accent, 10%);
+// $secondary-accent-darker: darken($secondary-accent, 20%);
+// $secondary-accent-light: lighten($secondary-accent, 10%);
+// $secondary-accent-lighter: lighten($secondary-accent, 20%);
+
+// $accent-dark: darken($accent, 10%);
+// $accent-darker: darken($accent, 20%);
+// $accent-light: lighten($accent, 10%);
+// $accent-lighter: lighten($accent, 20%);
+
+
+// $primaryText: #c28778;
+// $primaryTextDark: #b0614e;
+
+// $secondaryText: #9f9576;
+// $secondaryTextDark: #7e7760;
+
+// $accentText: #59a479;
+// $accentTextDark: #4d8263;
+
+// $allText: #8c9a74;
+// $allTextDark: #a4684d;
+
+
+// // whites and blacks
+// $gray: rgba(0,0,0, 0.04);
+// $grayDark: rgba(0,0,0, 0.14);
+// $grayDarker: rgba(0,0,0, 0.20);
+
+// $white: #ffffff;
+// $black: #000;
+
+
+
+
+
+$primary: #ffedb5;
+$primary-light: #fcf3d5;
+$primary-dark: #f8dc86;
+
+$secondary: #AA5440;
+$secondary-light: #c0675e;
+$secondary-dark: #85433c;
+
 $accent: #5FC08B;
-
-// tints and shades
-$primary-dark: darken($primary, 10%);
-$primary-darker: darken($primary, 20%);
-$primary-light: lighten($primary, 10%);
-$primary-lighter: lighten($primary, 20%);
-
-$primary-secondary-dark: darken($primary-secondary, 10%);
-$primary-secondary-darker: darken($primary-secondary, 20%);
-$primary-secondary-light: lighten($primary-secondary, 10%);
-$primary-secondary-lighter: lighten($primary-secondary, 20%);
-
-$secondary-dark: darken($secondary, 10%);
-$secondary-darker: darken($secondary, 20%);
-$secondary-light: #FFF2C8;
-$secondary-lighter: #FFF6DA;
-
-$secondary-accent-dark: darken($secondary-accent, 10%);
-$secondary-accent-darker: darken($secondary-accent, 20%);
-$secondary-accent-light: lighten($secondary-accent, 10%);
-$secondary-accent-lighter: lighten($secondary-accent, 20%);
-
-$accent-dark: darken($accent, 10%);
-$accent-darker: darken($accent, 20%);
-$accent-light: lighten($accent, 10%);
-$accent-lighter: lighten($accent, 20%);
+$accent-light: #81d0a5;
+$accent-lighter: #97ffc6;
+$accent-dark: #359f65;
 
 
-$primaryText: #c28778;
-$primaryTextDark: #b0614e;
+$gray-dark: #4d4d4d;
+$gray-darker: #4c4c4c;
+$gray: #d9d9d9;
+$gray-light: #bdbdbd;
+$gray-lighter: #ebebeb;
 
-$secondaryText: #9f9576;
-$secondaryTextDark: #7e7760;
-
-$accentText: #59a479;
-$accentTextDark: #4d8263;
-
-$allText: #8c9a74;
-$allTextDark: #a4684d;
-
-
-// whites and blacks
-$gray: rgba(0,0,0, 0.04);
-$grayDark: rgba(0,0,0, 0.14);
-$grayDarker: rgba(0,0,0, 0.20);
-
-$white: #ffffff;
-$black: #000;
+$black: #1c1919;
+$white: #f8f3e5;
