Added error and success colors to palette

--- a/styles/palette.module.scss
+++ b/styles/palette.module.scss
@@ -136,3 +136,10 @@ $gray-lighter: #ebebeb;
 
 $black: #1c1919;
 $white: #f8f3e5;
+
+// $success: #19A800;
+$success: #0A7F18;
+$success-light: #49BF57;
+
+$error: #D71809;
+$error-light: #D71809;
