--- a/components/TodoList/TodoList.module.scss
+++ b/components/TodoList/TodoList.module.scss
@@ -146,10 +146,23 @@
   box-shadow: 4px 5px 15px -2px rgba(0,0,0,0.4);
 }
 
+.checkFeedback {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 80px;
+  padding-left: 10px;
+  z-index: 3;
+  color: $error;
+  position: absolute;
+}
+
 .frontPaper {
   width: 150px;
   height: 150px;
   position: absolute; 
+  z-index: 4;
 }
 
 .paperCurl {
